# ai-sdk-rust

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/ai-sdk-assemblyai/: Cargo.toml
crates/ai-sdk-assemblyai/src/: lib.rs
crates/ai-sdk-azure/: Cargo.toml
crates/ai-sdk-azure/src/: lib.rs
crates/ai-sdk-black-forest-labs/: Cargo.toml
crates/ai-sdk-black-forest-labs/src/: lib.rs
crates/ai-sdk-bytedance/: Cargo.toml
crates/ai-sdk-bytedance/src/: lib.rs
crates/ai-sdk-deepgram/: Cargo.toml
crates/ai-sdk-deepgram/src/: lib.rs
crates/ai-sdk-deepseek/: Cargo.toml
crates/ai-sdk-deepseek/src/: lib.rs
crates/ai-sdk-gateway/: Cargo.toml
crates/ai-sdk-gateway/src/: gateway.rs  gateway_error.rs  gateway_tools.rs  lib.rs  vercel_ai_gateway.rs
crates/ai-sdk-hume/: Cargo.toml
crates/ai-sdk-hume/src/: lib.rs
crates/ai-sdk-lmnt/: Cargo.toml
crates/ai-sdk-lmnt/src/: lib.rs
crates/ai-sdk-luma/: Cargo.toml
crates/ai-sdk-luma/src/: lib.rs
crates/ai-sdk-mcp/: Cargo.toml
crates/ai-sdk-mcp/examples/: elicitation_multi_step.rs  hosted_oauth_http.rs  http_auth_typed_tools.rs  image_content.rs  local_mcp_client.rs  server_metadata.rs  sse_typed_tools.rs  stdio_typed_tools.rs  tool_meta.rs
crates/ai-sdk-mcp/src/: lib.rs  oauth.rs
crates/ai-sdk-mistral/: Cargo.toml
crates/ai-sdk-mistral/src/: lib.rs
crates/ai-sdk-moonshotai/: Cargo.toml
crates/ai-sdk-moonshotai/src/: lib.rs
crates/ai-sdk-open-responses/: Cargo.toml
crates/ai-sdk-open-responses/src/: lib.rs  open_responses.rs
crates/ai-sdk-openai-compatible/: Cargo.toml
crates/ai-sdk-openai-compatible/src/: lib.rs  openai_compatible.rs
crates/ai-sdk-otel/: Cargo.toml
crates/ai-sdk-otel/examples/: local_otlp_receiver.rs
crates/ai-sdk-otel/src/: lib.rs
crates/ai-sdk-perplexity/: Cargo.toml
crates/ai-sdk-perplexity/src/: lib.rs
crates/ai-sdk-provider/: Cargo.toml
crates/ai-sdk-provider-utils/: Cargo.toml
crates/ai-sdk-provider-utils/src/: lib.rs  provider_utils.rs
crates/ai-sdk-provider/src/: embedding_model.rs  file_data.rs  headers.rs  image_model.rs  json.rs  language_model.rs  lib.rs  provider.rs  reranking_model.rs  skills.rs  speech_model.rs  transcription_model.rs  video_model.rs  warning.rs
crates/ai-sdk-revai/: Cargo.toml
crates/ai-sdk-revai/src/: lib.rs
crates/ai-sdk-test-server/: Cargo.toml
crates/ai-sdk-test-server/src/: lib.rs
crates/ai-sdk-workflow/: Cargo.toml
crates/ai-sdk-workflow/src/: chat_transport.rs  lib.rs  stream_text_iterator.rs  workflow_agent.rs
crates/chat-sdk-adapter-discord/: Cargo.toml
crates/chat-sdk-adapter-discord/src/: cards.rs  lib.rs  markdown.rs  parse.rs  webhook.rs
crates/chat-sdk-adapter-gchat/: Cargo.toml
crates/chat-sdk-adapter-gchat/src/: cards.rs  lib.rs  markdown.rs  parse.rs  thread_id.rs  thread_utils.rs  user_info.rs  workspace_events.rs
crates/chat-sdk-adapter-github/: Cargo.toml
crates/chat-sdk-adapter-github/src/: cards.rs  lib.rs  markdown.rs  parse.rs  webhook.rs
crates/chat-sdk-adapter-linear/: Cargo.toml
crates/chat-sdk-adapter-linear/src/: cards.rs  lib.rs  linear_functions.rs  markdown.rs  parse.rs  thread_id.rs  token.rs  utils.rs
crates/chat-sdk-adapter-messenger/: Cargo.toml
crates/chat-sdk-adapter-messenger/src/: cards.rs  errors.rs  fetch.rs  lib.rs  markdown.rs  parse.rs  webhook.rs
crates/chat-sdk-adapter-shared/: Cargo.toml
crates/chat-sdk-adapter-shared/src/: adapter_utils.rs  buffer_utils.rs  card_utils.rs  crypto.rs  errors.rs  lib.rs  runtime.rs
crates/chat-sdk-adapter-slack/: Cargo.toml
crates/chat-sdk-adapter-slack/src/: api.rs  cards.rs  crypto.rs  format.rs  lib.rs  markdown.rs  modals.rs  webhook.rs
crates/chat-sdk-adapter-teams/: Cargo.toml
crates/chat-sdk-adapter-teams/src/: cards.rs  errors.rs  graph_api.rs  lib.rs  markdown.rs  modals.rs  (+2 more)
crates/chat-sdk-adapter-telegram/: Cargo.toml
crates/chat-sdk-adapter-whatsapp/: Cargo.toml
crates/chat-sdk-chat/: Cargo.toml
crates/chat-sdk-chat/src/: callback_url.rs  cards.rs  channel.rs  chat.rs  chat_singleton.rs  emoji.rs  errors.rs  from_full_stream.rs  lib.rs  logger.rs  markdown.rs  message.rs  modals.rs  plan.rs  postable_object.rs  reviver.rs  streaming_markdown.rs  thread.rs  thread_history.rs  transcripts.rs  types.rs
crates/chat-sdk-chat/tests/: errors.rs
crates/chat-sdk-state-ioredis/: Cargo.toml
crates/chat-sdk-state-ioredis/src/: lib.rs
crates/chat-sdk-state-memory/: Cargo.toml
crates/chat-sdk-state-memory/src/: lib.rs
crates/chat-sdk-state-pg/: Cargo.toml
crates/chat-sdk-state-pg/src/: lib.rs
crates/chat-sdk-state-redis/: Cargo.toml
docs/: goal-refinements-chat.md  package-progress-chat.md  package-progress-estimates-chat.tsv  package-progress-estimates.tsv  package-progress.md  upstream-parity-chat.md  upstream-parity.md
docs/chat/: goal-refinements.md  package-progress-estimates.tsv  package-progress.md  unported.md  upstream-parity.md
examples/: kitchen_sink.rs  vercel_ai_gateway_image.rs  vercel_ai_gateway_models.rs  vercel_ai_gateway_responses.rs  vercel_ai_gateway_text.rs
scripts/: check-naming-conventions.sh  check-otel-loopback.sh  gnhf-codex-xhigh.sh  package-progress-table.sh  run-codex-goal-chat-port.sh  run-codex-goal-port.sh  run-gnhf-port.sh
scripts/codex-goal/: README.md  goal-condition.md  port-ai-sdk.md
scripts/codex-goal-chat/: README.md  goal-condition.md  port-chat-sdk.md
src/: agent.rs  baseten.rs  cerebras.rs  chat_transport.rs  completion_transport.rs  deepinfra.rs  embed.rs  embedding_model.rs  embedding_model_middleware.rs  file_data.rs  files.rs  gateway.rs  gateway_error.rs  gateway_tools.rs  generate_image.rs  generate_object.rs  generate_speech.rs  generate_text.rs  generate_text_output.rs  generate_video.rs  headers.rs  huggingface.rs  image_model.rs  image_model_middleware.rs  json.rs  language_model.rs  language_model_middleware.rs  lib.rs  logger.rs  mock_models.rs  object_transport.rs  open_responses.rs  openai.rs  openai_compatible.rs  prompt.rs  provider.rs  provider_middleware.rs  provider_utils.rs  registry.rs  rerank.rs  (+21 more)
(+9 files in other folders)
