[package]
name = "ai-sdk-rust"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
description = "An idiomatic Rust port of the Vercel AI SDK."
license = "Apache-2.0"
repository = "https://github.com/andymac4182/ai-sdk-rust"
readme = "README.md"

[lib]
name = "ai_sdk_rust"
path = "src/lib.rs"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
url = { version = "2.5.8", features = ["serde"] }
