[workspace]
members = [
    ".",
    "crates/ai-sdk-gateway",
    "crates/ai-sdk-mcp",
    "crates/ai-sdk-openai-compatible",
    "crates/ai-sdk-open-responses",
    "crates/ai-sdk-otel",
    "crates/ai-sdk-provider",
    "crates/ai-sdk-provider-utils",
    "crates/ai-sdk-test-server",
    "crates/ai-sdk-workflow",
    "crates/ai-sdk-assemblyai",
    "crates/ai-sdk-azure",
    "crates/ai-sdk-black-forest-labs",
    "crates/ai-sdk-bytedance",
    "crates/ai-sdk-deepgram",
    "crates/ai-sdk-deepseek",
    "crates/ai-sdk-hume",
    "crates/ai-sdk-lmnt",
    "crates/ai-sdk-luma",
    "crates/ai-sdk-mistral",
    "crates/ai-sdk-moonshotai",
    "crates/ai-sdk-perplexity",
    "crates/ai-sdk-revai",
]
resolver = "3"

[package]
name = "ai-sdk-rust"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
description = "An idiomatic Rust port of the Vercel AI SDK."
license = "Apache-2.0"
repository = "https://github.com/andymac4182/ai-sdk-rust"
readme = "README.md"

[lib]
name = "ai_sdk_rust"
path = "src/lib.rs"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"

[dependencies]
ai-sdk-gateway = { path = "crates/ai-sdk-gateway" }
ai-sdk-openai-compatible = { path = "crates/ai-sdk-openai-compatible" }
ai-sdk-open-responses = { path = "crates/ai-sdk-open-responses" }
ai-sdk-otel = { path = "crates/ai-sdk-otel" }
ai-sdk-provider = { path = "crates/ai-sdk-provider" }
ai-sdk-provider-utils = { path = "crates/ai-sdk-provider-utils" }
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
time = { version = "0.3.45", features = ["serde", "serde-well-known"] }
ureq = "3.3.0"
url = { version = "2.5.8", features = ["serde"] }

[dev-dependencies]
ai-sdk-mcp = { path = "crates/ai-sdk-mcp" }
