[package]
name = "ai-sdk-otel"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
description = "Rust port of the Vercel AI SDK OpenTelemetry package."
license = "Apache-2.0"
repository = "https://github.com/andymac4182/ai-sdk-rust"
readme = "../../README.md"

[lib]
name = "ai_sdk_otel"
path = "src/lib.rs"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"

[features]
default = []
real-opentelemetry = [
    "dep:opentelemetry",
    "dep:opentelemetry-otlp",
    "dep:opentelemetry_sdk",
]

[dependencies]
ai-sdk-provider = { path = "../ai-sdk-provider" }
ai-sdk-provider-utils = { path = "../ai-sdk-provider-utils" }
opentelemetry = { version = "0.32.0", default-features = false, features = ["trace"], optional = true }
opentelemetry-otlp = { version = "0.32.0", default-features = false, features = ["http-json", "reqwest-blocking-client", "trace"], optional = true }
opentelemetry_sdk = { version = "0.32.0", default-features = false, features = ["trace"], optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
