[package]
name = "ai-sdk-perplexity"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
description = "Rust port of the Vercel AI SDK Perplexity provider package."
license = "Apache-2.0"
repository = "https://github.com/andymac4182/ai-sdk-rust"
readme = "../../README.md"

[lib]
name = "ai_sdk_perplexity"
path = "src/lib.rs"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"

[dependencies]
ai-sdk-rust = { path = "../.." }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
time = { version = "0.3.45", features = ["serde", "serde-well-known"] }
ureq = "3.3.0"
url = { version = "2.5.8", features = ["serde"] }
