[package]
name = "ai-sdk-provider-utils"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
description = "Rust port of the Vercel AI SDK provider-utils package."
license = "Apache-2.0"
repository = "https://github.com/andymac4182/ai-sdk-rust"
readme = "../../README.md"

[lib]
name = "ai_sdk_provider_utils"
path = "src/lib.rs"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"

[dependencies]
ai-sdk-provider = { path = "../ai-sdk-provider" }
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
url = { version = "2.5.8", features = ["serde"] }
