[package]
name = "chat-sdk-adapter-discord"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
description = "Rust port of the Vercel Chat SDK `adapter-discord` package (Discord adapter)."
license = "Apache-2.0"
repository = "https://github.com/andymac4182/ai-sdk-rust"
readme = "../../README.md"

[lib]
name = "chat_sdk_adapter_discord"
path = "src/lib.rs"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"

[dependencies]
async-trait = "0.1.89"
chat-sdk-chat = { path = "../chat-sdk-chat" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[dev-dependencies]
futures-executor = "0.3.32"
