[package]
name = "chat-sdk-adapter-gchat"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
description = "Rust port of the Vercel Chat SDK `adapter-gchat` package (Google Chat adapter)."
license = "Apache-2.0"
repository = "https://github.com/andymac4182/ai-sdk-rust"
readme = "../../README.md"

[lib]
name = "chat_sdk_adapter_gchat"
path = "src/lib.rs"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"

[dependencies]
async-trait = "0.1.89"
base64 = "0.22"
chat-sdk-adapter-shared = { path = "../chat-sdk-adapter-shared" }
chat-sdk-chat = { path = "../chat-sdk-chat" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[dev-dependencies]
futures-executor = "0.3.32"
