[package]
name = "chat-sdk-adapter-shared"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
description = "Rust port of the Vercel Chat SDK `adapter-shared` package (shared utilities used by every chat adapter)."
license = "Apache-2.0"
repository = "https://github.com/andymac4182/ai-sdk-rust"
readme = "../../README.md"

[lib]
name = "chat_sdk_adapter_shared"
path = "src/lib.rs"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"

[dependencies]
aes-gcm = "0.10"
base64 = "0.22"
chat-sdk-chat = { path = "../chat-sdk-chat" }
hex = "0.4"
rand = "0.8"
reqwest = { version = "0.13", features = ["json", "rustls"], default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

