[package]
name = "chat-sdk-chat"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
description = "Rust port of the Vercel Chat SDK `chat` package (the unified chat surface)."
license = "Apache-2.0"
repository = "https://github.com/andymac4182/ai-sdk-rust"
readme = "../../README.md"

[lib]
name = "chat_sdk_chat"
path = "src/lib.rs"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"

[dependencies]
markdown = "1.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
